--- a/question1/Prob-problem.ipynb
+++ b/question1/Prob-problem.ipynb
@@ -1,23 +1,39 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {
     "collapsed": false,
     "deletable": true,
     "editable": true
    },
-   "outputs": [],
    "source": [
-    "# solution for the question:\n",
-    "# if one event has P prob happenning, trying N times, what posibility it will happen m times straight, or in other word,\n",
-    "# happenning consecutively in m times.  "
+    "## Q1: After the Golden State Warriors acquired former MVP Kevin Durant in 2016, some NBA fans speculated that the Warriors would not lose consecutive games at any point of the season."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### a) If you wanted to determine the probability that this prediction would be true (i.e., that the Warriors would never lose consecutive games at any point during an 82-game season), what is one approach (or a few approaches) you may use to solve the problem? What answer do you get? Exact answers are of course welcome, but approaches that lead to approximations (and those approximations) are fine, too (please specify the precision of your estimate). Assume the Warriors have an 80% chance of winning each individual game."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# solution for the question:\n",
+    "# if one event has P prob happenning, trying N times, what posibility it will happen m times straight,\n",
+    "# or in other word, happenning consecutively in m times.  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
    "metadata": {
     "collapsed": true,
     "deletable": true,
@@ -26,18 +42,26 @@
    "outputs": [],
    "source": [
     "import math\n",
-    "import random\n"
+    "import random"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false,
     "deletable": true,
     "editable": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The chance they lose consecutive games 0.941253\n"
+     ]
+    }
+   ],
    "source": [
     "# this is the example using simulation\n",
     "# nn, ll is the simulation times and the results\n",
@@ -62,12 +86,12 @@
     "    if flag == 1:\n",
     "        ll += 1\n",
     "\n",
-    "ll/nn"
+    "print('The chance they lose consecutive games', ll/nn)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true,
     "deletable": true,
@@ -89,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -112,24 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true
-   },
-   "outputs": [],
-   "source": [
-    "for i in range(0,(n-2*m)):\n",
-    "    x.append((1-y[i])*px)\n",
-    "    y.append(sum(x[0:-m]))\n",
-    "sum(x)\n",
-    "# we didnot calculate all the Yn, so y[-1] will not be the answer here."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -137,14 +144,57 @@
    },
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "0.09621999999993618"
-      ]
-     },
-     "execution_count": 1,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The chance they lose consecutive games 0.9411831355860739\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(0,(n-2*m)):\n",
+    "    x.append((1-y[i])*px)\n",
+    "    y.append(sum(x[0:-m]))\n",
+    "print('The chance they lose consecutive games', sum(x))\n",
+    "# we didnot calculate all the Yn, so y[-1] will not be the answer here."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### b) So, would you have agreed with that hypothesis?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Answer: According to estimated probability, the chance for that Warriors would not lose consecutive games at any point of the season is only 5%-6%. It was a tricky question because statistically the confidence interval is 95% normally, the hypothesis of 5%-6% probability could not be rejected. However, the selection of confidence interval should be adjusted based on business setting. At the condition of 90% confidence interval, the hypothesis could be rejected."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### c) Finally, at least what % of a team's games would a team need to be expected to win (assuming that win probability stays constant from game to game) for there to be a greater than 50% chance that the team never suffers consecutive losses at any point in the season?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "They need to be at this probability to win : 0.9037800000000639\n"
+     ]
     }
    ],
    "source": [
@@ -166,16 +216,14 @@
     "p = 0.2\n",
     "while changep(p) > 0.5:\n",
     "    p -= 0.00001\n",
-    "p"
+    "print('They need to be at this probability to win :', 1-p)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true,
-    "deletable": true,
-    "editable": true
+    "collapsed": true
    },
    "outputs": [],
    "source": []
